// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button ui button disabled is disabled 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button disabled is enabled 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={false}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button normal inProgress is false 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button normal inProgress is true 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Spinner
      color="white"
      size={16}
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button outline inProgress is false 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button outline inProgress is true 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <Spinner
      color=""
      size={16}
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button size can override size 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="sm"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button size use md by default 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button tag can override tag 1`] = `
<div
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</div>
`;

exports[`Component: Button ui button tag use span by default 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal inProgress is false 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Icon
      className="material-icons-left"
      icon="save"
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal inProgress is true 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Spinner
      color="white"
      size={16}
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal with icon on the right 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Icon
      className="material-icons-right"
      icon="save"
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon outline inProgress is false 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <Icon
      className="material-icons-left"
      icon="save"
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon outline inProgress is true 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <Spinner
      color=""
      size={16}
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui button with icon tag can override tag 1`] = `
<div
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Icon
      className="material-icons-left"
      icon="save"
    />
    Save
  </Button>
</div>
`;

exports[`Component: Button ui button with icon tag use span by default 1`] = `
<span
  className="button  primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <Icon
      className="material-icons-left"
      icon="save"
    />
    Save
  </Button>
</span>
`;

exports[`Component: Button ui icon disabled is disabled 1`] = `
<span
  className="button  primary"
>
  <Icon
    color="primary"
    disabled={true}
    icon="save"
    onClick={[Function]}
  />
</span>
`;

exports[`Component: Button ui icon disabled is enabled 1`] = `
<span
  className="button  primary"
>
  <Icon
    color="primary"
    disabled={false}
    icon="save"
    onClick={[Function]}
  />
</span>
`;

exports[`Component: Button ui icon inProgress inProgress is false 1`] = `
<span
  className="button  primary"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
  />
</span>
`;

exports[`Component: Button ui icon inProgress inProgress is true 1`] = `
<span
  className="button  primary"
>
  <Spinner
    color=""
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon tag can override tag 1`] = `
<div
  className="button  primary"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
  />
</div>
`;

exports[`Component: Button ui icon tag use span by default 1`] = `
<span
  className="button  primary"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
  />
</span>
`;
